# libdom

./: .clog.toml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  changelog.md  readme.md
html-to-stream/: html2stream.c  readable.c  readable.h
include/: dom.h
src/: dom.c  parse.c  str_utils.c  str_utils.h
tests/: test_dom.cpp  test_str_utils.cpp
tests/html/: astro-year.html
tools/: build.sh  pretty-code.sh  run-tests.sh  style.uncrustify
